# reproenv

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  versioneer.py
.github/workflows/: pull-request.yml
docs/: api.rst  build_container.rst  conf.py  container_builders_and_runners.rst  index.rst  run_container.rst  user_guide.rst  why_containers.rst
neurodocker-templates/: fsl.yaml  jq.yaml
reproenv/: __init__.py  _version.py  exceptions.py  renderers.py  state.py  template.py  types.py
reproenv/cli/: cli.py
reproenv/cli/tests/: sample-template-jq.yaml  test_build_images_with_cli.py  test_cli.py
reproenv/schemas/: renderer.json  template.json
reproenv/tests/: sample-template-jq.yaml  test_build_images_docker.py  test_build_images_from_registered_templates.py  test_build_images_singularity.py  test_renderers.py  test_renderers_docker.py  test_renderers_from_registered_templates.py  test_renderers_singularity.py  test_state.py  test_template.py  utils.py
