[metadata]
name = reproenv
url = https://github.com/kaczmarj/reproenv
author = ReproEnv Developers
author_email = jakub.kaczmarzyk@gmail.com
description = A generic generator of Dockerfiles and Singularity files.
license = Apache License, 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    jinja2
    pyyaml
python_requires = >=3.7

[options.extras_require]
dev =
    codecov
    docker
    pytest-cov
    black

[options.package_data]
reproenv =
    schemas/*.json

[versioneer]
VCS = git
style = pep440
versionfile_source = reproenv/_version.py
versionfile_build = reproenv/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = reproenv/external/schema.py

[tool:pytest]
addopts = --cov=reproenv --cov-config=setup.cfg --verbose

[coverage:run]
omit =
    */tests/*
    reproenv/_version.py
    reproenv/external/*
