[metadata]
name = reproenv
url = https://github.com/kaczmarj/reproenv
author = ReproEnv Developers
author_email = jakub.kaczmarzyk@gmail.com
description = A generic generator of Dockerfiles and Singularity files.
license = Apache License, 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    jinja2
    jsonschema
    pyyaml
python_requires = >=3.7

[options.extras_require]
dev =
    black
    codecov
    docker
    flake8
    mypy
    pytest-cov

[options.package_data]
reproenv =
    schemas/*.json

[versioneer]
VCS = git
style = pep440
versionfile_source = reproenv/_version.py
versionfile_build = reproenv/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = reproenv/_version.py

[mypy-reproenv._version]
ignore_errors = True

[mypy-docker]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov=reproenv --cov-config=setup.cfg --verbose
markers =
    long: mark a test as taking a long time (minutes)

[coverage:run]
omit =
    */tests/*
    reproenv/_version.py
